--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -1,14 +1,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-    
+
     <item
         android:id="@+id/action_item1"
+        android:icon="@android:drawable/ic_menu_close_clear_cancel"
         android:showAsAction="always|withText"
-        android:title="@string/action_item1"
-        android:icon="@android:drawable/ic_menu_close_clear_cancel"/>
+        android:title="@string/action_item1"/>
     <item
         android:id="@+id/action_item2"
+        android:icon="@android:drawable/ic_menu_info_details"
         android:showAsAction="always|withText"
-        android:title="@string/action_item2"
-        android:icon="@android:drawable/ic_menu_info_details"/>
+        android:title="@string/action_item2"/>
+    <item
+        android:id="@+id/action_item3"
+        android:icon="@android:drawable/ic_menu_delete"
+        android:showAsAction="always|withText"
+        android:title="@string/action_item3"/>
 
 </menu>
