--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -5,7 +5,7 @@
         <item name="spinnerDropDownItemStyle">@style/Theme.Light.ActionBar.SpinnerItem</item>
     </style>
 
-    <style name="Theme.Light.ActionBar" parent="@style/Widget.Sherlock.ActionBar">
+    <style name="Theme.Light.ActionBar" parent="@style/Widget.Sherlock.Light.ActionBar">
         <item name="background">@color/backgroundColour</item>
         <item name="titleTextStyle">@style/Theme.Light.ActionBar.TitleTextStyle</item>
     </style>
