--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -8,12 +8,12 @@
     <item
         android:id="@+id/action_item2"
         android:icon="@android:drawable/ic_menu_info_details"
-        android:showAsAction="always|withText"
+        android:showAsAction="ifRoom|withText"
         android:title="@string/action_item2"/>
     <item
         android:id="@+id/action_item3"
         android:icon="@android:drawable/ic_menu_delete"
-        android:showAsAction="always|withText"
+        android:showAsAction="ifRoom|withText"
         android:title="@string/action_item3"/>
 
 </menu>
