--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="textColour">#FA0054</color>
+    <color name="textColour">#FBF5EF</color>
     <color name="backgroundColour">#2E9AFE</color>
 </resources>
