--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -4,11 +4,14 @@
         <item name="actionBarStyle">@style/Theme.Light.ActionBar</item>
         <item name="spinnerDropDownItemStyle">@style/Theme.Light.ActionBar.SpinnerItem</item>
         <item name="spinnerItemStyle">@style/Theme.Light.ActionBar.DropDownSpinner</item>
+        <item name="popupMenuStyle">@style/Theme.Light.ActionBar.Popup</item>
     </style>
 
     <style name="Theme.Light.ActionBar" parent="@style/Widget.Sherlock.Light.ActionBar">
         <item name="background">@color/backgroundColour</item>
         <item name="titleTextStyle">@style/Theme.Light.ActionBar.TitleTextStyle</item>
+        <item name="actionBarItemBackground">@color/backgroundColour</item>
+        <item name="selectableItemBackground">@color/backgroundColour</item>
     </style>
 
     <style name="Theme.Light.ActionBar.TitleTextStyle" parent="TextAppearance.Sherlock.Widget.ActionBar.Title">
@@ -16,12 +19,16 @@
     </style>
 
     <style name="Theme.Light.ActionBar.DropDownSpinner" parent="@style/Widget.Sherlock.TextView.SpinnerItem">
-       <item name="android:textColor">@color/textColour</item>
+        <item name="android:textColor">@color/textColour</item>
     </style>
-    
-   <style name="Theme.Light.ActionBar.SpinnerItem" parent="Widget.Sherlock.Light.DropDownItem.Spinner">
-       <item name="android:textColor">@color/textColour</item>
-       <item name="background">@color/backgroundColour</item>
+
+    <style name="Theme.Light.ActionBar.SpinnerItem" parent="Widget.Sherlock.Light.DropDownItem.Spinner">
+        <item name="android:textColor">@color/textColour</item>
     </style>
-    
+
+    <style name="Theme.Light.ActionBar.Popup" parent="Widget.Sherlock.ListPopupWindow">
+        <item name="android:popupBackground">@color/backgroundColour</item>
+        <item name="android:textColor">@color/textColour</item>
+    </style>
+
 </resources>
