--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -5,30 +5,35 @@
         <item name="spinnerDropDownItemStyle">@style/Theme.Light.ActionBar.SpinnerItem</item>
         <item name="spinnerItemStyle">@style/Theme.Light.ActionBar.DropDownSpinner</item>
         <item name="popupMenuStyle">@style/Theme.Light.ActionBar.Popup</item>
+        <item name="actionMenuTextColor">@color/white_text_colour</item>
+        <item name="itemTextAppearance">@style/Theme.Light.PopupMenuTextStyle</item>
     </style>
 
     <style name="Theme.Light.ActionBar" parent="@style/Widget.Sherlock.Light.ActionBar">
-        <item name="background">@color/backgroundColour</item>
         <item name="titleTextStyle">@style/Theme.Light.ActionBar.TitleTextStyle</item>
-        <item name="actionBarItemBackground">@color/backgroundColour</item>
-        <item name="selectableItemBackground">@color/backgroundColour</item>
+        <item name="background">@color/blue_background_colour</item>
     </style>
 
-    <style name="Theme.Light.ActionBar.TitleTextStyle" parent="TextAppearance.Sherlock.Widget.ActionBar.Title">
-        <item name="android:textColor">@color/textColour</item>
+    <style name="Theme.Light.ActionBar.TitleTextStyle" parent="@style/TextAppearance.Sherlock.Widget.ActionBar.Title">
+        <item name="android:textColor">@color/white_text_colour</item>
     </style>
 
     <style name="Theme.Light.ActionBar.DropDownSpinner" parent="@style/Widget.Sherlock.TextView.SpinnerItem">
-        <item name="android:textColor">@color/textColour</item>
+        <item name="android:textColor">@color/white_text_colour</item>
     </style>
 
-    <style name="Theme.Light.ActionBar.SpinnerItem" parent="Widget.Sherlock.Light.DropDownItem.Spinner">
-        <item name="android:textColor">@color/textColour</item>
+    <style name="Theme.Light.ActionBar.SpinnerItem" parent="@style/Widget.Sherlock.Light.DropDownItem.Spinner">
+        <item name="background">@color/blue_background_colour</item>
+        <item name="android:background">@color/blue_background_colour</item>
+        <item name="android:textColor">@color/white_text_colour</item>
     </style>
 
-    <style name="Theme.Light.ActionBar.Popup" parent="Widget.Sherlock.ListPopupWindow">
-        <item name="android:popupBackground">@color/backgroundColour</item>
-        <item name="android:textColor">@color/textColour</item>
+    <style name="Theme.Light.ActionBar.Popup" parent="@style/Widget.Sherlock.ListPopupWindow">
+        <item name="android:popupBackground">@color/blue_background_colour</item>
+    </style>
+
+    <style name="Theme.Light.PopupMenuTextStyle" parent="@android:style/TextAppearance.Widget.TextView.PopupMenu">
+        <item name="android:textColor">@color/white_text_colour</item>
     </style>
 
 </resources>
